// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPaginationNudger should display backward nudger 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link bpk-pagination-nudger"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="bpk-pagination-nudger__icon bpk-icon--rtl-support"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.75 16.537V7.463a1.358 1.358 0 00-2.251-1.11l-4.77 4.354a1.53 1.53 0 00-.04 2.184l4.77 4.718a1.357 1.357 0 002.291-1.072z"
      />
    </svg>
    <span
      class="bpk-pagination-nudger__text--hidden"
    >
      previous
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkPaginationNudger should display forward nudger 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link bpk-pagination-nudger"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="bpk-pagination-nudger__icon bpk-icon--rtl-support"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.25 7.463v9.074a1.358 1.358 0 002.251 1.11l4.77-4.354a1.53 1.53 0 00.04-2.184l-4.77-4.718A1.357 1.357 0 008.25 7.463z"
      />
    </svg>
    <span
      class="bpk-pagination-nudger__text--hidden"
    >
      next
    </span>
  </button>
</DocumentFragment>
`;
